array.island.Island.scala.error
Erreur de compilation :
Island:4: error: illegal start of simple expression
    var L:List[Int]=[]
                    ^